--- a/assets/css/newprofile.css
+++ b/assets/css/newprofile.css
@@ -124,10 +124,15 @@ top: 30px;
     left: 20px;
 }
 .logout{
-    font-size: 20px;
-    padding: 20px 20px;
+    font-size: 15px;
+    padding: 2px 2px;
+    padding-right: 20px;
     position: relative;
     top: 43px;
+    width: 110px;
+    height: 30px;
+    position: relative;
+    left: 20px;
     
 }
 .logout span{
@@ -271,6 +276,7 @@ form input {
     height: 35px;
     border-radius: 5px;
     border: 1px solid black;
+    background-color: rgb(187, 192, 192);
 }
 #phoneno1{
     width: 50%;
