--- a/assets/css/playerprofile.css
+++ b/assets/css/playerprofile.css
@@ -514,7 +514,12 @@ a {
 
 
 }
-
+.sportsicon{
+    width: 39px;
+    position: relative;
+    left: 70px;
+    top: 25px;
+}
 
 .fa-star {
     color: rgb(255, 183, 0);
@@ -544,12 +549,12 @@ top: 20px;
 }
 
 
-.cricketicon {
+/* .cricketicon {
     width: 30px;
     position: relative;
     top: 20px;
     left: 50px;
-}
+} */
 
 .connectbtn{
     position: relative;
